@@ -1,3 +1,8 @@
+2011-09-22  Kan-Ru Chen  <kanru@kanru.info>
+
+	* ecomplete.el (ecomplete-display-matches): Use a local keymap to
+	handle bindings.
+
 2011-10-06  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-win.el (gnus-configure-windows): Protect against reading
